force-app/main/default/objects/Quebec_Property_Config__c/Quebec_Property_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Quebec Property Config</label>
</CustomObject>