force-app/main/default/objects/Quebec_Property_Config__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Clé API pour accéder au service Quebec Property Search</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>