force-app/main/default/objects/Quebec_Property_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si le service Quebec Property Search est actif</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>