force-app/main/default/objects/Quebec_Property_Config__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Date de dernière mise à jour de la configuration</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>