force-app/main/default/objects/Quebec_Property_Config__c/fields/Municipality_Codes__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Codes__c</fullName>
    <description>Codes des municipalités autorisées (séparés par virgules)</description>
    <label>Municipality Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>